0030130: Coding Rules - MSVC 2017 gives warnings about using of std::fpos::seekpos() within RWStl

Use of deprecated method std::fpos::seekpos() is avoided with MSVC 11 (Visual Studio 2012) and above.